--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://ingreyeslara.github.io/apellido_gitpages",
+  "homepage": "https://angel-eduardo-renteria-meza.github.io/renteria_meza_gitpages",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
